--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -5,7 +5,7 @@
 services:
   vote:
     build: 
-      context: ./vote
+      context: ../../app/vote
       target: dev
     depends_on:
       redis:
@@ -17,7 +17,7 @@ services:
       retries: 3
       start_period: 10s
     volumes:
-     - ./vote:/usr/local/app
+     - ../../app/vote:/usr/local/app
     ports:
       - "8080:80"
     networks:
@@ -25,14 +25,14 @@ services:
       - back-tier
 
   result:
-    build: ./result
+    build: ../../app/result
     # use nodemon rather than node for local dev
     entrypoint: nodemon --inspect=0.0.0.0 server.js
     depends_on:
       db:
         condition: service_healthy 
     volumes:
-      - ./result:/usr/local/app
+      - ../../app/result:/usr/local/app
     ports:
       - "8081:80"
       - "127.0.0.1:9229:9229"
@@ -42,7 +42,7 @@ services:
 
   worker:
     build:
-      context: ./worker
+      context: ../../app/worker
     depends_on:
       redis:
         condition: service_healthy 
@@ -54,9 +54,9 @@ services:
   redis:
     image: redis:alpine
     volumes:
-      - "./healthchecks:/healthchecks"
+      - "../healthchecks:/healthchecks"
     healthcheck:
-      test: /healthchecks/redis.sh
+      test: ../healthchecks/redis.sh
       interval: "5s"
     networks:
       - back-tier
@@ -68,9 +68,9 @@ services:
       POSTGRES_PASSWORD: "postgres"
     volumes:
       - "db-data:/var/lib/postgresql/data"
-      - "./healthchecks:/healthchecks"
+      - "../healthchecks:/healthchecks"
     healthcheck:
-      test: /healthchecks/postgres.sh
+      test: ../healthchecks/postgres.sh
       interval: "5s"
     networks:
       - back-tier
@@ -79,7 +79,7 @@ services:
   # it won't run unless you specify the "seed" profile
   # docker compose --profile seed up -d
   seed:
-    build: ./seed-data
+    build: ../seed-data
     profiles: ["seed"]
     depends_on:
       vote:
