--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -54,10 +54,12 @@ services:
   redis:
     image: redis:alpine
     volumes:
-      - "../healthchecks:/healthchecks"
+      - "../healthchecks:/healthchecks:ro"
     healthcheck:
-      test: ../healthchecks/redis.sh
+      test: ["CMD-SHELL", "/healthchecks/redis.sh"]
       interval: "5s"
+      timeout: "3s"
+      retries: 20
     networks:
       - back-tier
 
@@ -68,10 +70,12 @@ services:
       POSTGRES_PASSWORD: "postgres"
     volumes:
       - "db-data:/var/lib/postgresql/data"
-      - "../healthchecks:/healthchecks"
+      - "../healthchecks:/healthchecks:ro"
     healthcheck:
-      test: ../healthchecks/postgres.sh
+      test: ["CMD-SHELL", "/healthchecks/postgres.sh"]
       interval: "5s"
+      timeout: "5s"
+      retries: 20
     networks:
       - back-tier
 
