--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -4,6 +4,7 @@
 
 services:
   vote:
+    image: roger-vote:${VOTE_TAG:-dev}
     build: 
       context: ../../app/vote
       target: dev
@@ -18,11 +19,33 @@ services:
       start_period: 10s
     volumes:
      - ../../app/vote:/usr/local/app
-    ports:
-      - "8080:80"
+    expose:
+      - "80"
     networks:
       - front-tier
       - back-tier
+  
+  vote2:
+      image: roger-vote2:${VOTE_TAG:-dev}
+      build: 
+        context: ../../app/vote
+        target: dev
+      depends_on:
+        redis:
+          condition: service_healthy
+      healthcheck: 
+        test: ["CMD", "curl", "-f", "http://localhost"]
+        interval: 15s
+        timeout: 5s
+        retries: 3
+        start_period: 10s
+      volumes:
+      - ../../app/vote:/usr/local/app
+      expose:
+        - "80"
+      networks:
+        - front-tier
+        - back-tier
 
   result:
     build: ../../app/result
@@ -33,12 +56,27 @@ services:
         condition: service_healthy 
     volumes:
       - ../../app/result:/usr/local/app
-    ports:
-      - "8081:80"
-      - "127.0.0.1:9229:9229"
+    expose:
+      - "81"
     networks:
       - front-tier
       - back-tier
+  
+  result2:
+    build: ../../app/result
+    # use nodemon rather than node for local dev
+    entrypoint: nodemon --inspect=0.0.0.0 server.js
+    depends_on:
+      db:
+        condition: service_healthy 
+    volumes:
+      - ../../app/result:/usr/local/app
+    expose:
+      - "81"
+    networks:
+      - front-tier
+      - back-tier
+
 
   worker:
     build:
@@ -91,6 +129,20 @@ services:
     networks:
       - front-tier
     restart: "no"
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ../../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../../nginx/certs:/etc/nginx/certs:ro
+    depends_on:
+      - vote
+      - result
+    networks:
+      - front-tier
 
 volumes:
   db-data:
